--- a/BolWallet/_Imports.razor
+++ b/BolWallet/_Imports.razor
@@ -2,6 +2,7 @@
 @using System.ComponentModel.DataAnnotations
 @using System.Linq;
 @using System.Reflection
+@using System.Numerics
 @using System.Globalization
 
 @using Microsoft.AspNetCore.Components.Forms
@@ -11,6 +12,7 @@
 @using Microsoft.JSInterop
 
 @using BolWallet
+@using Bol.Core.Abstractions
 
 @using MudBlazor
 @using MudBlazor.Utilities
@@ -19,3 +21,5 @@
 @using Blazing.Mvvm.Components
 @using Blazing.Mvvm.Components.Routing
 @using Blazing.Mvvm.ComponentModel
+
+@using CommunityToolkit.Maui.Alerts
