Change navigation after wallet creation

--- a/BolWallet/Pages/GenerateWalletWithPasswordPage.razor
+++ b/BolWallet/Pages/GenerateWalletWithPasswordPage.razor
@@ -1,7 +1,7 @@
 ﻿@page "/generate-wallet-with-password"
 
 @inherits MvvmComponentBase<GenerateWalletWithPasswordViewModel>
-@inject NavigationManager nav;
+@inject INavigationService navigationService
 
 <MudThemeProvider />
 
@@ -53,5 +53,7 @@
         isProgressBarVisible = false;
 
         await InvokeAsync(() => StateHasChanged());
+
+        await navigationService.NavigateTo<MainWithAccountViewModel>(true);
     }
 }
