Update labels for citizenship document fields

--- a/BolWallet/Pages/CreateEdiPage.razor
+++ b/BolWallet/Pages/CreateEdiPage.razor
@@ -119,7 +119,7 @@
 
         foreach (var country in selectedCountries)
         {
-            CitizeshipsDocuments.Add(new(country, Color.Transparent, country, ""));
+            CitizeshipsDocuments.Add(new($"{country} Citizenship - Verification Document", Color.Transparent, $"{country} Citizenship - Verification Document", ""));
         }
     }
 
