--- a/BolWallet/Pages/RegisterAsCertifierPage.razor
+++ b/BolWallet/Pages/RegisterAsCertifierPage.razor
@@ -53,7 +53,22 @@
     {
         try
         {
-            var account = await bolService.RegisterAsCertifier(registerAsCertifierForm.Countries.Split(",").ToList(), new BigInteger(registerAsCertifierForm.Fee));
+            List<Bol.Core.Model.Country> supportedCountries = new();
+            List<string> selectedCountries = registerAsCertifierForm.Countries.Split(",").ToList();
+
+            foreach (var countryName in selectedCountries)
+            {
+                Country selectedCountry = _content.Countries.FirstOrDefault(c => c.Name == countryName.Trim());
+
+                supportedCountries.Add(new Bol.Core.Model.Country
+                {
+                    Name = selectedCountry.Name,
+                    Alpha3 = selectedCountry.Alpha3,
+                    Region = selectedCountry.Region
+                });
+            }
+
+            var account = await bolService.RegisterAsCertifier(supportedCountries, new BigInteger(registerAsCertifierForm.Fee));
         }
         catch (Exception ex)
         {
