--- a/BolWallet/Pages/CitizenshipPage.razor
+++ b/BolWallet/Pages/CitizenshipPage.razor
@@ -17,7 +17,7 @@
                         }
                     </MudSelect>
 
-                    <MudSelect style="margin-bottom: 20px;" T="string" Label="Citizenships" Required="true" For="@(() => citizenshipsForm.Citizenships)" HelperText="Choose up to three citizenships from the options provided." MultiSelection="true" @bind-Value="citizenshipsForm.Citizenships">
+                    <MudSelect style="margin-bottom: 20px;" T="string" SelectedValues="SelectedCitizeships" SelectedValuesChanged="SelectedCitizenshipsChanged" Label="Citizenships" Required="true" For="@(() => citizenshipsForm.Citizenships)" HelperText="Choose up to three citizenships from the options provided." MultiSelection="true" @bind-Value="citizenshipsForm.Citizenships">
                         @foreach (var country in _content.Countries)
                         {
                             <MudSelectItem T="string" Value="country.Name">@country.Name</MudSelectItem>
@@ -37,13 +37,22 @@
 @code {
     CitizenshipsForm citizenshipsForm = new CitizenshipsForm();
 
-    private async Task<IEnumerable<Country>> Search(string value)
+    List<string> SelectedCitizeships = new() { };
+
+    private async Task SelectedCitizenshipsChanged(IEnumerable<string> selectedCountries)
     {
-        if (string.IsNullOrEmpty(value))
-            return _content.Countries;
+        SelectedCitizeships = selectedCountries.ToList();
 
-        return await Task.Run(() => _content.Countries.Where(x => x.Name.StartsWith(value, StringComparison.InvariantCultureIgnoreCase)).ToList());
+        if (SelectedCitizeships.Count > 3)
+        {
+            SelectedCitizeships.RemoveAt(SelectedCitizeships.Count - 1);
 
+            await Toast.Make("Maximum of 3 citizenships can be selected.").Show();
+
+            //citizenshipsForm.Citizenships = string.Join(",", SelectedCitizeships);
+
+            return;
+        }
     }
 
     private async Task OnValidSubmit(EditContext context)
